fixed a navbar issue on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -173,10 +173,3 @@ a:hover {
     box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
 }
 
-.right-scroll-bar-position {
-     right: 0px !important;
-}
-
-.m_3b16f56b {
-     right: 0px !important;
-}
